# BlackBox

./: README.md  blackbox_daemon.py  blackbox_viewer.py  block_server.py  chain_of_custody.py  config.ini  installer.ps1  module1_edr.py  module2_dns.py  module3_alerts.py  module4_vm.py  pyproject.toml  requirements.txt
dashboard_templates/: blocked.html  index.html
