[project]
name = "blackbox-parental"
version = "1.0.0"
description = "BLACK BOX parental security suite"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
blackbox = "blackbox_daemon:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "blackbox_daemon",
  "blackbox_viewer",
  "chain_of_custody",
  "module1_edr",
  "module2_dns",
  "module3_alerts",
  "module4_vm",
]
